# Pois

./: .gitignore  .travis.yml  README.md  __init__.py  pois.py  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: ci.yaml
pois/: __init__.py  errors.py  tlds.json
tests/: test_domain.py  test_pois.py  test_socketpipeline.py  test_uri.py  test_url.py
